Transformed month and day into integers.

--- a/pipeline_template.ipynb
+++ b/pipeline_template.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Transform months to integer data\n",
+    "def clean_week_and_day(dataFrame):\n",
+    "\n",
+    "    month_transform  = {\n",
+    "        \"jan\":1,\n",
+    "        \"feb\":2,\n",
+    "        \"mar\":3,\n",
+    "        \"apr\":4,\n",
+    "        \"may\":5,\n",
+    "        \"jun\":6,\n",
+    "        \"jul\":7,\n",
+    "        \"aug\":8,\n",
+    "        \"sep\":9,\n",
+    "        \"oct\":10,\n",
+    "        \"nov\":11,\n",
+    "        \"dec\":12\n",
+    "    }\n",
+    "    \n",
+    "    day_transform = {\n",
+    "        \"mon\":1,\n",
+    "        \"tue\":2,\n",
+    "        \"wed\":3,\n",
+    "        \"thu\":4,\n",
+    "        \"fri\":5,\n",
+    "        \"sat\":6,\n",
+    "        \"sun\":7,\n",
+    "    }\n",
+    "    \n",
+    "    dataFrame[\"month\"] = dataFrame[\"month\"].apply(lambda x: month_transform[x])\n",
+    "    dataFrame[\"day\"]   = dataFrame[\"day\"].apply(lambda x: day_transform[x])\n",
+    "    \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +114,8 @@
        "      <th></th>\n",
        "      <th>X</th>\n",
        "      <th>Y</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
        "      <th>FFMC</th>\n",
        "      <th>DMC</th>\n",
        "      <th>DC</th>\n",
@@ -88,6 +132,8 @@
        "      <th>0</th>\n",
        "      <td>7</td>\n",
        "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "      <td>86.2</td>\n",
        "      <td>26.2</td>\n",
        "      <td>94.3</td>\n",
@@ -102,6 +148,8 @@
        "      <th>1</th>\n",
        "      <td>7</td>\n",
        "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
        "      <td>90.6</td>\n",
        "      <td>35.4</td>\n",
        "      <td>669.1</td>\n",
@@ -116,6 +164,8 @@
        "      <th>2</th>\n",
        "      <td>7</td>\n",
        "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
        "      <td>90.6</td>\n",
        "      <td>43.7</td>\n",
        "      <td>686.9</td>\n",
@@ -130,6 +180,8 @@
        "      <th>3</th>\n",
        "      <td>8</td>\n",
        "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "      <td>91.7</td>\n",
        "      <td>33.3</td>\n",
        "      <td>77.5</td>\n",
@@ -144,6 +196,8 @@
        "      <th>4</th>\n",
        "      <td>8</td>\n",
        "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
        "      <td>89.3</td>\n",
        "      <td>51.3</td>\n",
        "      <td>102.2</td>\n",
@@ -159,15 +213,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   X  Y  FFMC   DMC     DC  ISI  temp  RH  wind  rain  area\n",
-       "0  7  5  86.2  26.2   94.3  5.1   8.2  51   6.7   0.0   0.0\n",
-       "1  7  4  90.6  35.4  669.1  6.7  18.0  33   0.9   0.0   0.0\n",
-       "2  7  4  90.6  43.7  686.9  6.7  14.6  33   1.3   0.0   0.0\n",
-       "3  8  6  91.7  33.3   77.5  9.0   8.3  97   4.0   0.2   0.0\n",
-       "4  8  6  89.3  51.3  102.2  9.6  11.4  99   1.8   0.0   0.0"
+       "   X  Y  month  day  FFMC   DMC     DC  ISI  temp  RH  wind  rain  area\n",
+       "0  7  5      3    5  86.2  26.2   94.3  5.1   8.2  51   6.7   0.0   0.0\n",
+       "1  7  4     10    2  90.6  35.4  669.1  6.7  18.0  33   0.9   0.0   0.0\n",
+       "2  7  4     10    6  90.6  43.7  686.9  6.7  14.6  33   1.3   0.0   0.0\n",
+       "3  8  6      3    5  91.7  33.3   77.5  9.0   8.3  97   4.0   0.2   0.0\n",
+       "4  8  6      3    7  89.3  51.3  102.2  9.6  11.4  99   1.8   0.0   0.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,33 +230,14 @@
     "# import data\n",
     "# this dataset I retrieved from https://archive.ics.uci.edu/ml/machine-learning-databases/forest-fires/\n",
     "data = pd.read_csv('forestfires.csv',sep=',')\n",
-    "#data = data.drop(['month', 'day'], 1)\n",
+    "#Instead of dropping, replace month and day by numeric values\n",
+    "data = clean_week_and_day(data)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(517, 11)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -217,170 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "      <th>FFMC</th>\n",
-       "      <th>DMC</th>\n",
-       "      <th>DC</th>\n",
-       "      <th>ISI</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>RH</th>\n",
-       "      <th>wind</th>\n",
-       "      <th>rain</th>\n",
-       "      <th>area</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>88.6</td>\n",
-       "      <td>91.8</td>\n",
-       "      <td>709.9</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>17.4</td>\n",
-       "      <td>56</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>373</th>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>94.8</td>\n",
-       "      <td>222.4</td>\n",
-       "      <td>698.6</td>\n",
-       "      <td>13.9</td>\n",
-       "      <td>20.3</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>9.3</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>13.9</td>\n",
-       "      <td>40</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>418</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>203.2</td>\n",
-       "      <td>664.5</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>24.9</td>\n",
-       "      <td>42</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>93.4</td>\n",
-       "      <td>145.4</td>\n",
-       "      <td>721.4</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>29.6</td>\n",
-       "      <td>27</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.46</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     X  Y  FFMC    DMC     DC   ISI  temp  RH  wind  rain  area\n",
-       "109  4  5  88.6   91.8  709.9   7.1  17.4  56   5.4   0.0  0.00\n",
-       "373  5  4  94.8  222.4  698.6  13.9  20.3  42   2.7   0.0  0.00\n",
-       "58   2  2  84.0    9.3   34.0   2.1  13.9  40   5.4   0.0  0.00\n",
-       "418  2  4  92.0  203.2  664.5   8.1  24.9  42   5.4   0.0  2.44\n",
-       "154  1  5  93.4  145.4  721.4   8.1  29.6  27   2.7   0.0  1.46"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def make_dummies():\n",
-    "    \n",
-    "    return data #met dummies ipv categorische variablen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "train_new = make_dummies(train)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# create functions for pipeline\n",
-    "class NoTransformation(BaseEstimator, TransformerMixin):\n",
+    "class NoTranformation(BaseEstimator, TransformerMixin):\n",
     "    \"\"\" Empty transformer class that allows to skip a step in the pipeline,\n",
     "    in this case applying no transformation.\"\"\"\n",
     "    def __init__(self):\n",
@@ -404,32 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class MakeDummies(BaseEstimator, TransformerMixin):\n",
-    "    \"\"\" Empty transformer class that allows to skip a step in the pipeline,\n",
-    "    in this case applying no transformation.\"\"\"\n",
-    "    def __init__(self):\n",
-    "        self = self\n",
-    "\n",
-    "    def fit(self, X, y=None):\n",
-    "        \n",
-    "        #herken welke variabelen categorisch zijn\n",
-    "        #\n",
-    "        \n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, X):\n",
-    "        return X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -442,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -457,15 +311,14 @@
     "\n",
     "# transformation to apply\n",
     "trans_dict = {\n",
-    "    'makedummies':MakeDummies(),\n",
-    "    'none':NoTransformation(), # simply passes the data\n",
+    "    'none':NoTranformation(), # simply passes the data\n",
     "    'poly':PolynomialFeatures(2),\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -481,31 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluation_values = []\n",
-    "i = 0\n",
-    "for train_indices, cv_indices in k_fold.split(train):\n",
-    "    i += 1\n",
-    "    for model_name, trans_name in list(itertools.product(model_dict, trans_dict)):\n",
-    "        estimator = build_pipeline(model_name, trans_name, model_dict, trans_dict)\n",
-    "        estimator.fit(train.drop(y_variable, 1).iloc[train_indices], train[y_variable].iloc[train_indices])\n",
-    "        y_pred = estimator.predict(train.drop(y_variable, 1).iloc[cv_indices])\n",
-    "        evaluation_values.append([i, model_name, trans_name, \n",
-    "                                  mse(train[y_variable].iloc[cv_indices],y_pred),\n",
-    "                                  mae(train[y_variable].iloc[cv_indices],y_pred),\n",
-    "                                  ev(train[y_variable].iloc[cv_indices],y_pred),\n",
-    "                                  r2(train[y_variable].iloc[cv_indices],y_pred)])\n",
-    "\n",
-    "evaluation_values = pd.DataFrame(evaluation_values, \n",
-    "                                 columns = ['fold','model','transformation','mse','mae','ev','r2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -548,32 +377,32 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">lr</th>\n",
        "      <th>none</th>\n",
-       "      <td>5741.604269</td>\n",
-       "      <td>23.989574</td>\n",
-       "      <td>-0.650590</td>\n",
-       "      <td>-0.948198</td>\n",
+       "      <td>2148.821051</td>\n",
+       "      <td>16.460362</td>\n",
+       "      <td>-0.092861</td>\n",
+       "      <td>-0.099574</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>poly</th>\n",
-       "      <td>8106.656659</td>\n",
-       "      <td>34.493342</td>\n",
-       "      <td>-7.008543</td>\n",
-       "      <td>-7.643062</td>\n",
+       "      <td>3919.335186</td>\n",
+       "      <td>29.964649</td>\n",
+       "      <td>-2.369855</td>\n",
+       "      <td>-2.406261</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">svr</th>\n",
        "      <th>none</th>\n",
-       "      <td>5723.392178</td>\n",
-       "      <td>14.914542</td>\n",
-       "      <td>-0.000107</td>\n",
-       "      <td>-0.120233</td>\n",
+       "      <td>2208.209688</td>\n",
+       "      <td>10.215960</td>\n",
+       "      <td>-0.000420</td>\n",
+       "      <td>-0.088197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>poly</th>\n",
-       "      <td>5723.359830</td>\n",
-       "      <td>14.928392</td>\n",
-       "      <td>0.000420</td>\n",
-       "      <td>-0.120975</td>\n",
+       "      <td>2208.115351</td>\n",
+       "      <td>10.223627</td>\n",
+       "      <td>0.000195</td>\n",
+       "      <td>-0.087899</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -582,45 +411,56 @@
       "text/plain": [
        "                              mse        mae        ev        r2\n",
        "model transformation                                            \n",
-       "lr    none            5741.604269  23.989574 -0.650590 -0.948198\n",
-       "      poly            8106.656659  34.493342 -7.008543 -7.643062\n",
-       "svr   none            5723.392178  14.914542 -0.000107 -0.120233\n",
-       "      poly            5723.359830  14.928392  0.000420 -0.120975"
+       "lr    none            2148.821051  16.460362 -0.092861 -0.099574\n",
+       "      poly            3919.335186  29.964649 -2.369855 -2.406261\n",
+       "svr   none            2208.209688  10.215960 -0.000420 -0.088197\n",
+       "      poly            2208.115351  10.223627  0.000195 -0.087899"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "evaluation_values = []\n",
+    "i = 0\n",
+    "for train_indices, cv_indices in k_fold.split(train):\n",
+    "    i += 1\n",
+    "    for model_name, trans_name in list(itertools.product(model_dict, trans_dict)):\n",
+    "        estimator = build_pipeline(model_name, trans_name, model_dict, trans_dict)\n",
+    "        estimator.fit(train.drop(y_variable, 1).iloc[train_indices], train[y_variable].iloc[train_indices])\n",
+    "        y_pred = estimator.predict(train.drop(y_variable, 1).iloc[cv_indices])\n",
+    "        evaluation_values.append([i, model_name, trans_name, \n",
+    "                                  mse(train[y_variable].iloc[cv_indices],y_pred),\n",
+    "                                  mae(train[y_variable].iloc[cv_indices],y_pred),\n",
+    "                                  ev(train[y_variable].iloc[cv_indices],y_pred),\n",
+    "                                  r2(train[y_variable].iloc[cv_indices],y_pred)])\n",
+    "\n",
+    "evaluation_values = pd.DataFrame(evaluation_values, columns = ['fold','model','transformation','mse','mae','ev','r2'])\n",
     "evaluation_values.groupby(['model', 'transformation']).agg('mean').drop('fold', 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19.94732412946983"
+       "25.605572541203376"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# apply to test set\n",
-    "estimator = build_pipeline('svr', 'none', model_dict, trans_dict)\n",
+    "estimator = build_pipeline('lr', 'none', model_dict, trans_dict)\n",
     "estimator.fit(train.drop(y_variable, 1), train[y_variable])\n",
-    "\n",
-    "test_new = make_dummies(test)\n",
-    "\n",
-    "\n",
     "y_pred = estimator.predict(test.drop(y_variable, 1))\n",
     "mae(test[y_variable],y_pred)"
    ]
@@ -642,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
